# sendto3dsmax

./: .gitignore  README.md  pyproject.toml
src/sendto3dsmax/: __init__.py  __main__.py  errors.py
