[project]
name = "sendto3dsmax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sunfkny", email = "sunfkny@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "comtypes>=1.4.11",
    "pywin32>=310",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
sendto3dsmax = "sendto3dsmax.__main__:main"
